--- a/.github/workflows/tag-rel.yml
+++ b/.github/workflows/tag-rel.yml
@@ -25,7 +25,7 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           filename: HeroRotation-${{ steps.vars.outputs.tag }}.zip
-          exclusions: '*.git* *.pkgmeta *.svn*'
+          exclusions: '*.git* *.pkgmeta *.svn* .editorconfig LICENSE README.md symlink.bat symlink.sh HeroRotation_ClassTemplate*'
       # Create a release on GitHub
       - name: Create Release
         id: create_release
