[Outlaw] Update APL

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /.vs
 /HeroRotation_Rogue/APL_current.txt
 /HeroRotation_Rogue/APL_new.txt
+/HeroRotation_Rogue/APL_subtlety_current.txt
+/HeroRotation_Rogue/APL_outlaw_new.txt
+/HeroRotation_Rogue/APL_outlaw_current.txt
+/HeroRotation_Rogue/.vs
